@@ -56,6 +56,7 @@ namespace MySql.Data.MySqlClient
         bool clearing;
         bool interactiveSession;
         bool functionsReturnString;
+        bool useAffectedRows;
 
         static MySqlConnectionStringBuilder()
         {
@@ -98,6 +99,7 @@ namespace MySql.Data.MySqlClient
             defaultValues.Add(Keyword.AllowUserVariables, false);
             defaultValues.Add(Keyword.InteractiveSession, false);
             defaultValues.Add(Keyword.FunctionsReturnString, false);
+            defaultValues.Add(Keyword.UseAffectedRows, false);
         }
 
         /// <summary>
@@ -723,6 +725,22 @@ namespace MySql.Data.MySqlClient
             }
         }
 
+#if !CF && !MONO
+        [Category("Advanced")]
+        [DisplayName("Use Affected Rows")]
+        [Description("Should the returned affected row count reflect affected rows instead of found rows?")]
+        [DefaultValue(false)]
+#endif
+        public bool UseAffectedRows
+        {
+            get { return useAffectedRows; }
+            set
+            {
+                SetValue("Use Affected Rows", value);
+                useAffectedRows = value;
+            }
+        }
+
         #endregion
 
         #region Pooling Properties
@@ -1156,6 +1174,8 @@ namespace MySql.Data.MySqlClient
                     return Keyword.InteractiveSession;
                 case "FUNCTIONS RETURN STRING":
                     return Keyword.FunctionsReturnString;
+                case "use affected rows":
+                    return Keyword.UseAffectedRows;
             }
             throw new ArgumentException(Resources.KeywordNotSupported, key);
         }
@@ -1242,6 +1262,8 @@ namespace MySql.Data.MySqlClient
                     return interactiveSession;
                 case Keyword.FunctionsReturnString:
                     return functionsReturnString;
+                case Keyword.UseAffectedRows:
+                    return useAffectedRows;
                 default:
                     return null; /* this will never happen */
             }
@@ -1351,6 +1373,8 @@ namespace MySql.Data.MySqlClient
                     interactiveSession = ConvertToBool(value); break;
                 case Keyword.FunctionsReturnString:
                     functionsReturnString = ConvertToBool(value); break;
+                case Keyword.UseAffectedRows:
+                    useAffectedRows = ConvertToBool(value); break;
             }
         }
 
@@ -1532,6 +1556,7 @@ namespace MySql.Data.MySqlClient
         TreatTinyAsBoolean,
         AllowUserVariables,
         InteractiveSession,
-        FunctionsReturnString
+        FunctionsReturnString,
+        UseAffectedRows
     }
 }
