@@ -205,8 +205,6 @@ namespace MySql.Data.MySqlClient
 #if !CF
                 }
 #endif
-                if (baseStream == null)
-                    throw new Exception();
             }
             catch (Exception ex)
             {
@@ -215,7 +213,8 @@ namespace MySql.Data.MySqlClient
             }
 
             if (baseStream == null)
-                throw new MySqlException("Unable to connect to any of the specified MySQL hosts");
+                throw new MySqlException(Resources.UnableToConnectToHost,
+                    (int)MySqlErrorCode.UnableToConnectToHost);
 
             int maxSinglePacket = 255*255*255;
             stream = new MySqlStream(baseStream, encoding, false);
@@ -343,7 +342,11 @@ namespace MySql.Data.MySqlClient
         /// </summary>
         private void SetConnectionFlags()
         {
-            ClientFlags flags = ClientFlags.FOUND_ROWS;
+            // allow load data local infile
+            ClientFlags flags = ClientFlags.LOCAL_FILES;
+
+            if (!Settings.UseAffectedRows)
+                flags |= ClientFlags.FOUND_ROWS;
 
             if (version.isAtLeast(4, 1, 1))
             {
@@ -373,9 +376,6 @@ namespace MySql.Data.MySqlClient
                 flags |= ClientFlags.LONG_PASSWORD; // for long passwords
             else
                 flags &= ~ClientFlags.LONG_PASSWORD;
-
-            // allow load data local infile
-            flags |= ClientFlags.LOCAL_FILES;
 
             // did the user request an interactive session?
             if (Settings.InteractiveSession)
